--- a/src/components/FeaturedMovie.module.css
+++ b/src/components/FeaturedMovie.module.css
@@ -14,6 +14,12 @@
   width: inherit;
   height: inherit;
   background: linear-gradient(to right, #111 30%, transparent 70%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 30px;
+  padding-bottom: 150px;
+  padding-top: 70px;
 }
 
 .featuredName {
@@ -24,13 +30,60 @@
 .featuredInfo {
   font-size: 18px;
   margin-top: 15px;
+  display: flex;
+}
+
+.featuredPoints,
+.featuredYear,
+.featuredSeasons {
+  margin-right: 15px;
 }
 
 .featuredPoints {
-  display: inline-block;
   color: #46d369;
 }
 
-.featuredYear {
+.featuredDescription {
+  margin-top: 15px;
+  font-size: 20px;
+  color: #999;
+  max-width: 40%;
+}
+
+.featuredButtons {
+  margin-top: 15px;
+}
+
+.featuredWatchButton,
+.featuredMyListButton {
   display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 12px 25px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-right: 10px;
+  opacity: 1;
+  transition: all ease 0.2s;
+}
+
+.featuredWatchButton:hover,
+.featuredMyListButton:hover {
+  opacity: 0.7;
+}
+
+.featuredWatchButton {
+  background-color: #fff;
+  color: #000;
+}
+
+.featuredMyListButton {
+  background-color: #333;
+  color: #fff;
+}
+
+.featuredGenres {
+  margin-top: 15px;
+  font-size: 18px;
+  color: #999;
 }
