--- a/src/components/MovieRow.module.css
+++ b/src/components/MovieRow.module.css
@@ -13,7 +13,7 @@
 }
 
 .movieRowList {
-  width: 999999999px;
+  transition: all ease 0.5s;
 }
 
 .movieRowItem {
@@ -31,4 +31,33 @@
 
 .movieRowItem:hover img {
   transform: scale(1);
+}
+
+.movieRowLeft,
+.movieRowRight {
+  position: absolute;
+  width: 40px;
+  height: 225px;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  cursor: pointer;
+  opacity: 0;
+  transition: all ease 0.5s;
+}
+
+.movieRow:hover .movieRowLeft,
+.movieRow:hover .movieRowRight {
+  opacity: 1;
+}
+
+.movieRowLeft {
+  left: 0;
+}
+
+.movieRowRight {
+  right: 0;
 }
